Added radio_button function

--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,22 @@
       <meta charset="utf-8">
   </head>
   <body style="min-width:120px">
+  <form action="#" method="post" class="demoForm" id="demoForm">
+    <fieldset>
+    <p>Select App</p>
+      <p>
+        <div>
+          <input type="radio" name="feature" value="airbnb" checked /><label for="airbnb">Airbnb</label>
+        </div>
+        <div>
+          <input type="radio" name="feature" value="booking" /><label for="booking">Booking.com</label>
+        </div>
+        <div>
+          <input type="radio" name="feature" value="agoda" /><label for="agoda">Agoda</label>
+        </div>
+      </p>
+      </fieldset>
+    </form>
     <p>リロード間隔：<input type="number" name="reload" value=""  style="width:40px; text-align:right;"> min</p>
     <p align="center"><button type="button" name="button">スタート</button></p>
     <p align="center"><button type="button" name="button">ストップ</button></p>
